<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="sdf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_app"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="380dp"
        android:layout_height="556dp"
        android:orientation="vertical"
        android:showDividers="beginning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/secondBuffer"
                android:layout_width="334dp"
                android:layout_height="44dp"
                android:fontFamily="@font/google_sans_bold"
                android:textColor="@color/color_name_app"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/buttonDelete"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:contentDescription="@string/todo"
                android:onClick="calculator"
                app:srcCompat="@drawable/delete_white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="vertical">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#49454F" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginBottom="16dp"
            android:baselineAligned="false"
            android:dividerPadding="1dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAC"
                style="?android:attr/selectableItemBackground"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_clear"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonChangeSign"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_change_sign"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonRemainder"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_remainder"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonDivision"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_second"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_division"
                android:textColor="#FFD8E4"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_seven"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonEight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_eight"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonNine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_nine"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonMultiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_second"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_multiplication"
                android:textColor="#FFD8E4"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_four"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonFive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_five"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonSix"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_six"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_second"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_minus"
                android:textColor="#FFD8E4"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOne"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_one"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_two"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonThree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_three"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_second"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_plus"
                android:textColor="#FFD8E4"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="182dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_zero"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonComma"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_comma"
                android:textColor="#E8DEF8"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonEqually"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_weight="1"
                android:background="@drawable/button_style_second"
                android:fontFamily="@font/google_sans_bold"
                android:onClick="calculator"
                android:text="@string/button_equally"
                android:textColor="#FFD8E4"
                android:textSize="32sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:fontFamily="@font/google_sans_bold"
        android:text="@string/app_name"
        android:textColor="#E6E1E5"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/mainBuffer"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/google_sans"
        android:textColor="@color/normal_color"
        android:textSize="57sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.307" />

</androidx.constraintlayout.widget.ConstraintLayout>